src/test/ui/consts/const_fn_floating_point_arithmetic.gated.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/const_fn_floating_point_arithmetic.rs:20:1
   |
LL | fn main() {}
   | ^^^^^^^^^

error: aborting due to previous error

